--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=NEYAQUAN\\HONGQUAN;Initial Catalog=DbRenalCar;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
