--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=NEYAQUAN\\HONGQUAN; Initial Catalog=DbRenalCar; Integrated Security=True;Connect Timeout=30; Encrypt=False; Trust Server Certificate=False;Application Intent=ReadWrite; Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=DESKTOP-U615AEC\\TNSERVER; Initial Catalog=DbRenalCar; Integrated Security=True;Connect Timeout=30; Encrypt=False; Trust Server Certificate=False;Application Intent=ReadWrite; Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -10,4 +10,4 @@
   },
   "AllowedHosts": "*"
 }
-//scaffold-DbContext "data source= NEYAQUAN\HONGQUAN; initial catalog=DbRenalCar; integrated security=True; TrustServerCertificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force
+//scaffold-DbContext "data source= DESKTOP-U615AEC\TNSERVER; initial catalog=DbRenalCar; integrated security=True; TrustServerCertificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force
