--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -10,4 +10,4 @@
   },
   "AllowedHosts": "*"
 }
-//scaffold-DbContext "data source= DESKTOP-U615AEC\TNSERVER; initial catalog=DbRenalCar; integrated security=True; TrustServerCertificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force
+//scaffold-DbContext "data source= DESKTOP-U615AEC\TNSERVER; initial catalog=DbRenalCar; integrated security=True; Trust Server Certificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force
