checkou by VNPAY

--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -8,6 +8,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "VnPay": {
+    "TmnCode": "OZJPM4YS",
+    "HashSecret": "YE6QTG8F7EU6L8JJK6D0OXC302DBJ8HL",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Version": "2.1.0",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://localhost:7256/Cart/PaymentCallBack"
+  },
   "AllowedHosts": "*"
 }
 
