--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=NEYAQUAN\\HONGQUAN; Initial Catalog=DbRenalCar; Integrated Security=True;Connect Timeout=30; Encrypt=False; Trust Server Certificate=False;Application Intent=ReadWrite; Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source= LAPTOP-1N3EICI1\\SQLEXPRESS; Initial Catalog=DbRenalCar; Integrated Security=True;Connect Timeout=30; Encrypt=False; Trust Server Certificate=False;Application Intent=ReadWrite; Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -20,4 +20,4 @@
   },
   "AllowedHosts": "*"
 }
-
+//scaffold-DbContext "data source= LAPTOP-1N3EICI1\SQLEXPRESS; initial catalog=DbRenalCar; integrated security=True; TrustServerCertificate=True;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models -Force
